Configuracion bean validator
