# applications/app-service/src/main/resources/openapi/users-api.yaml
@@ -6,7 +6,9 @@ info:
 
 servers:
   - url: http://localhost:8080/api/v1
-
+tags:
+  - name: users
+    description: API para gestión de usuarios
 paths:
   /users/{id}:
     get:
@@ -67,10 +69,11 @@ components:
     UserRequest:
       type: object
       required:
+        - id
         - names
         - lastname
         - email
-        - salary
+        - salaryBase
       properties:
         names:
           type: string
@@ -84,7 +87,7 @@ components:
           example: juan.perez@mail.com
         salary:
           type: number
-          format: double
+          format: bigdecimal
           example: 3500000
 
     UserResponse:
